--- a/package.json
+++ b/package.json
@@ -30,12 +30,17 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.12",
     "@types/lodash": "^4.17.21",
+    "@untools/logger": "^0.0.7",
+    "aws-sdk": "^2.1693.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "framer-motion": "^12.23.24",
+    "iconsax-react": "^0.0.8",
+    "iso-country-currency": "^0.7.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.555.0",
     "next-themes": "^0.4.6",
